Translate `put*` Verbs
This commit translates all the verbs of the `put` group.
Still many untranslated responses, also some bugs need to be fixed in
some of these verbs across classes.

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -128,6 +128,8 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21000   |           | gruppo_dare                  | == Dare e Prendere
 // -----------------------------------------------------------------------------
 | 21100   |           | gruppo_vestirsi              | == Vestirsi e Svestirsi
+// -----------------------------------------------------------------------------
+| 21200   |           | gruppo_mettere               | == Mettere
 // =============================================================================
 | 30000   |           | comandi_comandi_domande      | == Verbi di Domande
 // -----------------------------------------------------------------------------
