--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.12-Alpha, 2018-11-03: Alan 3.0beta6
+v0.7.13-Alpha, 2018-11-03: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -106,9 +106,16 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN leggere.                  ---> read
   CAN liberare.                 ---> free         (+ release)
   CAN mangiare.                 ---> eat
+  CAN mettere.                  ---> put          (+ lay, place)
+  CAN mettere_contro.           ---> put_against
+  CAN mettere_dietro.           ---> put_behind
+  CAN mettere_in.               ---> put_in       (+ insert)
+  CAN mettere_sotto.            ---> put_under
+  CAN mettere_su.               ---> put_on
+  CAN mettere_vicino.           ---> put_near
   CAN modalità_breve.           ---> brief
   CAN modalità_lunga.           ---> verbose
-  CAN mordere.                  ---> bite (+ chew)
+  CAN mordere.                  ---> bite         (+ chew)
   CAN mostrare.                 ---> 'show'       (+ reveal)
   CAN notificare.               ---> 'notify'
   CAN notificare_off.           ---> notify_off
@@ -116,7 +123,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN nuotare.                  ---> swim
   CAN nuotare_in.               ---> swim_in
   CAN parlare.                  ---> talk
-  CAN parlare_con.              ---> talk_to (+ speak)
+  CAN parlare_con.              ---> talk_to      (+ speak)
   CAN pensare.                  ---> think
   CAN pensare_a.                ---> think_about
   CAN pregare.                  ---> pray
@@ -128,9 +135,9 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN riempire.                 ---> fill
   CAN riempire_con.             ---> fill_with
   CAN rifare.                   ---> 'again'
-  CAN ringraziamenti.           ---> credits (+ acknowledgments, author, copyright)
-  CAN riparare.                 ---> fix (+ mend, repair)
-  CAN rispondere.               ---> answer (+ reply)
+  CAN ringraziamenti.           ---> credits      (+ acknowledgments, author, copyright)
+  CAN riparare.                 ---> fix          (+ mend, repair)
+  CAN rispondere.               ---> answer       (+ reply)
   CAN rispondere_No.            ---> 'no'
   CAN rispondere_Sì.            ---> yes
   CAN rompere.                  ---> break        (+ destroy)
@@ -273,18 +280,11 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN lie_in.
   CAN lie_on.
   CAN lift.
---CAN light. ---------------------> ** VERBO ELIMINATO ** (+ lit)
+--CAN light. ---------------------> ** VERBO ELIMINATO **
 --CAN look_at. -------------------> ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
   CAN pry.
   CAN pry_with.
-  CAN put.         -- (+ lay, place)
-  CAN put_against.
-  CAN put_behind.
-  CAN put_down.
-  CAN put_in.      -- (+ insert)
-  CAN put_near.
-  CAN put_on.
-  CAN put_under.
+--CAN put_down. ------------------> ** WASN'T USED! (SEE 'drop'!) **
   CAN rub.
   CAN search.
   CAN shake.
