Jump Verbs Group
Translate verbs `jump`, `jump_in` and `jump_on` to:
- `salta`, `salta_in` and `salta_su`.

New verb response: `ogg1_illegale_IN_sg`/`pl`.
Translate verb response:
- `check_hero_not_sitting1` to `impossibile_da_seduto`.
- `check_hero_not_lying_down1` to `impossibile_da_sdraiato`.

Create test for jumping actions: `casa_saltare.a3sol`.

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -130,6 +130,8 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21100   |           | gruppo_vestirsi              | == Vestirsi e Svestirsi
 // -----------------------------------------------------------------------------
 | 21200   |           | gruppo_mettere               | == Mettere
+// -----------------------------------------------------------------------------
+| 21300   |           | gruppo_saltare               | == Saltare
 // =============================================================================
 | 30000   |           | comandi_comandi_domande      | == Verbi di Domande
 // -----------------------------------------------------------------------------
