Verbs 'stand', 'get_off' and 'lie_*'
Translate verb restriction attributes:
- `stand`    to `alzarsi`.
- `get_off`  to `scendere_da`.
- `lie_down` to `sdraiarsi`.
- `lie_in`   to `sdraiarsi_in`.
- `lie_on`   to `sdraiarsi_su`.
Delete verb restriction attributes:
- `get_up`

Translate verbs:
- `stand`    to `alzati`.
- `get_off`  to `scendi_da`.
- `lie_down` to `sdraiati`.
- `lie_in`   to `sdraiati_in`.
- `lie_on`   to `sdraiati_su`.

Delete verb `get_up` (in Italian `alzati` covers all cases).

Create test for this group of actions: `casa_sdraiarsi-e-sedersi.a3sol`.

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -132,6 +132,8 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21200   |           | gruppo_mettere               | == Mettere
 // -----------------------------------------------------------------------------
 | 21300   |           | gruppo_saltare               | == Saltare
+// -----------------------------------------------------------------------------
+| 21400   |           | gruppo_sedersi               | == Sedersi, Sdraiarsi, Alzarsi
 // =============================================================================
 | 30000   |           | comandi_comandi_domande      | == Verbi di Domande
 // -----------------------------------------------------------------------------
