--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.13-Alpha, 2018-11-03: Alan 3.0beta6
+v0.7.14-Alpha, 2018-11-09: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -49,6 +49,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
 --------------------------------------------------------------------------------
   CAN abbandonare_partita.      ---> 'quit'
   CAN accendere.                ---> turn_on
+  CAN alzarsi.                  ---> stand (up)
   CAN andare_a.                 ---> go_to
   CAN annusare.                 ---> smell
   CAN aprire.                   ---> open
@@ -149,7 +150,11 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN sbloccare.                ---> unlock
   CAN sbloccare_con.            ---> unlock_with
   CAN scavare.                  ---> dig
+  CAN scendere_da.              ---> get_off
   CAN scrivere.                 ---> write
+  CAN sdraiarsi.                ---> lie_down
+  CAN sdraiarsi_in.             ---> lie_in
+  CAN sdraiarsi_su.             ---> lie_on
   CAN sedersi.                  ---> sit (down)
   CAN sedersi_su.               ---> sit_on
   CAN seguire.                  ---> follow
@@ -272,13 +277,9 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
 --CAN extinguish. ----------------> ** VERBO ELIMINATO **  (+ put out, quench)
   CAN fire.
   CAN fire_at.
-  CAN get_up.
-  CAN get_off.
+--CAN get_up. --------------------> ** VERBO ELIMINATO **
   CAN hint.        -- (+ hints)
   CAN kick.
-  CAN lie_down.
-  CAN lie_in.
-  CAN lie_on.
   CAN lift.
 --CAN light. ---------------------> ** VERBO ELIMINATO **
 --CAN look_at. -------------------> ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
@@ -292,7 +293,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN shoot_with.
 --CAN smell0. --------------------> ** ATTRIBUTO ELIMINATO **
   CAN squeeze.
-  CAN stand.       -- (up)
   CAN stand_on.
 --CAN switch. --------------------> ** VERBO ELIMINATO **
 --CAN switch_on. -----------------> ** VERBO ELIMINATO **
