--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -134,6 +134,8 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21300   |           | gruppo_saltare               | == Saltare
 // -----------------------------------------------------------------------------
 | 21400   |           | gruppo_sedersi               | == Sedersi, Sdraiarsi, Alzarsi
+// -----------------------------------------------------------------------------
+| 21500   |           | gruppo_lanciare              | == Lanciare
 // =============================================================================
 | 30000   |           | comandi_comandi_domande      | == Verbi di Domande
 // -----------------------------------------------------------------------------
